// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
/>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235);"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
/>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253);"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253);"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235);"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`theming Stack.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0);"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`theming Stack.styles.base should render correctly 2`] = `
<div
  class="css-view-1dbjc4n"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(255, 0, 0); padding: 16px 16px 16px 16px;"
/>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0);"
>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); margin-bottom: 32px; padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
  <div
    class="css-view-1dbjc4n"
    style="background-color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
  >
    <div
      class="css-text-901oao"
      dir="auto"
      style="color: rgb(33, 33, 33); font-size: 16px;"
    >
      First
    </div>
  </div>
</div>
`;
